--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,8 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
@@ -14,6 +16,9 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <main class="container">
+            {% block body %}{% endblock %}
+            {% block javascript %}{% endblock javascript %}
+        </main>
     </body>
 </html>
