--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,5 +20,8 @@
             {% block body %}{% endblock %}
             {% block javascript %}{% endblock javascript %}
         </main>
+        <footer>
+            <p>BoardGameGeek API</p>
+        </footer>
     </body>
 </html>
